--- a/deployment.yml
+++ b/deployment.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: live-streaming-demo-backend
+  name: live-streaming-demo
 spec:
   selector:
     app: live-streaming-demo
@@ -15,7 +15,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: live-streaming-demo-backend
+  name: live-streaming-demo
   labels:
     app: live-streaming-demo
 spec:
@@ -35,8 +35,8 @@ spec:
           volumeMounts:
           - mountPath: /chunks
             name: video-chunks
-        - name: node-app
-          image: mattiacattarinussi/live-streaming-demo-app
+        - name: app-backend
+          image: mattiacattarinussi/live-streaming-demo-backend
           ports:
             - containerPort: 8080
           volumeMounts:
@@ -45,3 +45,40 @@ spec:
       volumes:
         - name: video-chunks
           emptyDir: {}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: live-streaming-demo-frontend
+spec:
+  selector:
+    app: live-streaming-demo
+    tier: frontend
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+  type: NodePort
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: live-streaming-demo-frontend
+  labels:
+    app: live-streaming-demo
+spec:
+  selector:
+    matchLabels:
+      app: live-streaming-demo
+      tier: frontend
+  template:
+    metadata:
+      labels:
+        app: live-streaming-demo
+        tier: frontend
+    spec:
+      containers:
+        - name: app-frontend
+          image: mattiacattarinussi/live-streaming-demo-frontend
+          ports:
+            - containerPort: 80
