Refactor application deployment

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -7,6 +7,6 @@ server {
     }
 
     location /api {
-        proxy_pass http://live-streaming-demo;
+        proxy_pass http://live-streaming-demo-api;
     }
 }
