--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
-    "jsonwebtoken": "^8.2.2"
+    "jsonwebtoken": "^8.2.2",
+    "request": "^2.87.0"
   },
   "scripts": {
     "start": "node server.js"
