Add endpoint to get authorization for watching the stream

--- a/deployment/backend.yml
+++ b/deployment/backend.yml
@@ -38,3 +38,8 @@ spec:
           image: mattiacattarinussi/live-streaming-demo-backend
           ports:
             - containerPort: 5000
+          env:
+            - name: REDIS_HOST
+              value: live-streaming-demo-redis
+            - name: REDIS_PORT
+              value: '6379'
