--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.2.2",
+    "redis": "^2.8.0",
     "request": "^2.87.0"
   },
   "scripts": {
