--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.2.2",
     "redis": "^2.8.0",
-    "request": "^2.87.0"
+    "request": "^2.87.0",
+    "uuid": "^3.2.1"
   },
   "scripts": {
     "start": "node server.js"
